Fix alignment with seperator in range input by reapplying the center alignment

--- a/components/datepicker/theme.css
+++ b/components/datepicker/theme.css
@@ -337,6 +337,10 @@
   }
 }
 
+.date-picker-input-range input {
+  text-align: center;
+}
+
 .overlay {
   composes: box-shadow-200;
   background: var(--color-white);
